# salestrack

./: .gitignore  build.properties  build.sbt  dbserver  pom.xml  replicate  sbt  trade.SNAPSHOT.apk  trade.apk
android/project/: Build.scala
android/src/main/: AndroidManifest.xml
android/src/main/scala/: Journal.scala
android/src/test/scala/: Specs.scala
android/tests/src/main/: AndroidManifest.xml
dbreplicator/: .project  assembly  assembly.xml  build.sbt  pom.xml  run  run.sh  run.sh.save
dbreplicator/doc/: dest.hibernate.cfg.xml  src.hibernate.cfg.xml
dbreplicator/script/: run.bat  run.sh
dbreplicator/src/main/resources/: dest.hibernate.cfg.xml  log4j.properties  src.hibernate.cfg.xml
dbreplicator/src/test/resources/: trade.properties
lift/: build.sbt  compile-journal.sh  compile-pages.sh  trade.cabal
lift/src/main/haskell/: Balance.hs  Compare.hs  Journal.hs  goodslist.hs  menu.hs  model.hs
lift/src/main/scala/org/tort/trade/lift/: Boot.scala
lift/src/main/webapp/: balance.html  compare.html  journal.html
lift/src/main/webapp/WEB-INF/: web.xml
lift/src/main/webapp/css/: journal.css  menu.css
lift/src/test/haskell/: JournalTest.hs
lift/src/test/scala/org/tort/trade/lift/: REPL.scala
model/: .project  build.sbt  pom.xml
model/src/test/resources/: hibernate.cfg.xml
project/: build.scala  plugins.sbt
service/: build.sbt
webapp/: .project  build.sbt  pom.xml
webapp/.externalToolBuilders/: New_Builder.launch
webapp/db/: trade.properties  trade.script
webapp/src/main/resources/: hibernate.cfg.xml
(+166 files in other folders)
