name:                trade-client
version:             0.1
author:              tort
maintainer:          langeran@gmail.com
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs: src/main/haskell
  ghc-options: -Wall
  exposed-modules: Journal
  build-depends: fay-jquery, fay-base, fay-text
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:      src/test/haskell
  ghc-options: -Wall
  default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: JournalTest.hs
  build-depends:       fay-base, fay-text,
                       hspec >= 1.8,
                       trade-client
  default-language:    Haskell2010
